--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -25,7 +25,7 @@
       <div class="card-content">
         <div class="card-img-container">
           <img 
-            src="{% static 'images/tyrion.jpeg' %}" 
+            src="{% static 'images/dog.jpg' %}" 
             alt="A Happy Dog"
             width="250px"
             height="250px"
