--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     rel="shortcut icon"
-    type="images/png"
-    href={% static 'images/splash.svg' %}"
+    type="image/png"
+    href="{% static 'images/dog.jpg' %}"
   >
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   <title>Doggies DayCare</title>
