--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,8 +28,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/dogs">All Doggies</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
+        <li><a href="{% url 'dogs_create' %}">Add a Doggy</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
