--- a/main_app/templates/main_app/dog_form.html
+++ b/main_app/templates/main_app/dog_form.html
@@ -7,6 +7,11 @@
 
 {% block content %}
 
+{% if cat %}
+    <h1>Edit {{ dog.name }}</h1>
+  {% else %}
+    <h1>Add a Doggy</h1>
+  {% endif %}
 <div class="page-header">
   <h1>Add a Doggy</h1>
   <img src="{% static 'images/dog.jpg' %}" alt="A dog"/>
