--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
   {% block head %}
   {% endblock %}
 </head>
-<body>
+<body class="back">
   <header>
     <div class="header-logo-container">
       <a href="/">
