finish toy functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,6 +30,7 @@
       <ul>
         <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
         <li><a href="{% url 'dogs_create' %}">Add a Doggy</a></li>
+        <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
