stub up add a toy functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,7 +12,7 @@
     href="{% static 'images/dog.jpg' %}"
   >
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-  <title>Doggies DayCare</title>
+  <title>Peeking Doggies DayCare</title>
   {% block head %}
   {% endblock %}
 </head>
@@ -21,8 +21,8 @@
     <div class="header-logo-container">
       <a href="/">
         <img 
-          src="{% static 'images/header-logo.svg' %}"
-          alt="The Doggies Daycare Logo"
+          src="{% static 'images/PeekingDog-07.svg' %}"
+          alt="The Peeking Doggies Daycare Logo"
         >
       </a>
     </div>
