--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -8,12 +8,13 @@
 {% block content %}
 
 <section class="logo-container">
-  <div class="dog-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Doggie DayCare Dog" />
-  </div>
-  <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Doggie DayCare"
+  {% comment %} <div class="dog-container">
+    <img src="{% static 'images/PeekingDog-19.svg' %}" alt="The Peeking Doggie DayCare Dog" />
+  </div> {% endcomment %}
+  <h1>The Peeking Doggies Daycare</h1>
+ <img 
+    src="{% static 'images/hp_img.jpg' %}" 
+    alt="Text reads: Peeking Doggie DayCare"
   />
 </section>
 
