--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -149,7 +149,7 @@ nav li {
 }
 
 .page-header img {
-  height: 40px;
+  height: 80px;
   margin-left:15px;
 }
 
@@ -211,6 +211,11 @@ nav li {
   
   .page-header img:first-of-type {
     margin-left: 25px;
+  }
+ 
+  h1 {
+    font-size: 75px;
+    color: #ff0000;
   }
 
   @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
