--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -69,7 +69,7 @@ main > section {
   }
 
   main > section {
-    width: 40%;
+    width: 90%;
   }
 
   .login {
@@ -81,6 +81,12 @@ main > section {
   }
 
   .logo-container {
-    max-width: 520px;
+    max-width: 820px;
   }
+}
+
+h1 {
+  font-size: 55px;
+  color: #f98b8c;
+  text-align: center;
 }
