--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -91,12 +91,63 @@
         {% endfor %}
       </tbody>
     </table>
-   {% else %}
-    <div class="subsection-content">
+    {% else %}
+      <div class="subsection-content">
         <p>{{dog.name}} has never been fed 🥺</p>
-    </div>
-   {% endif %} 
+      </div>
+    {% endif %} 
   </section>
+  <section class="toys">
+    <div class="subsection-title">
+      <h2>Toys</h2>
+      {% comment %} <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
+      <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
+      <img src="{% static 'images/fish.svg' %}" alt="A fishy toy" /> {% endcomment %}
+      </div>
+      <h3>{{ dog.name }}'s Toys</h3>
+      <div class="subsection-content">
+        {% if dog.toys.count %}
+          {% for toy in dog.toys.all %}
+            <div class="toy-container">
+              <div 
+                class="color-block"
+                style="background-color: {{ toy.color }}"
+              ></div>
+              <a href="{% url 'toys_detail' toy.id %}">
+                <p>A {{ toy.color }} {{ toy.name }}</p>
+              </a>
+            </div>
+          {% endfor %}
+        {% else %}
+          <p class="no-toys">{{dog.name}} doesn't have any toys 😞</p>
+        {% endif %}
+      </div>
+      <h3>Available Toys</h3>
+      <div class="subsection-content">
+        {% if toys.count %}
+          {% for toy in toys.all %}
+            <div class="toy-container">
+              <div 
+                class="color-block"
+                style="background-color: {{ toy.color }}"
+              ></div>
+              <a href="{% url 'toys_detail' toy.id %}">
+                <p>A {{ toy.color }} {{ toy.name }}</p>
+              </a>
+              <form action="" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn submit">Give toy</button>
+              </form>
+            </div>
+          {% endfor %}
+        {% else %}
+          <p class="all-toys">
+            {{dog.name}} already has all the available toys 🥳
+          </p>
+        {% endif %}
+      </div>
+    </section>
+
 </div>
 
 {% endblock %}
