--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -13,10 +13,10 @@
 
 <section class="page-header">
   <h1>Dog List</h1>
-  <img src="{% static 'images/cool-cat.svg' %}" alt="A Needy Dog" />
-  <img src="{% static 'images/happy-cat.svg' %}" alt="A Hyper Dog" />
-  <img src="{% static 'images/teacup-cat.svg' %}" alt="A Former Guide Dog" />
-  <img src="{% static 'images/cat-in-box.svg' %}" alt="A Happy Puppy" />;
+  <img src="{% static 'images/PeekingDog-01.svg' %}" alt="A Needy Dog" />
+  <img src="{% static 'images/PeekingDog-05.svg' %}" alt="A Hyper Dog" />
+  <img src="{% static 'images/PeekingDog-20.svg' %}" alt="A Former Guide Dog" />
+  <img src="{% static 'images/PeekingDog-18.svg' %}" alt="A Happy Puppy" />
 </section>
 
 <section class="card-container">
@@ -26,10 +26,8 @@
         <div class="card-content">
           <div class="card-img-container">
             <img 
-              src="{% static 'images/dog.jpg' %}" 
+              src="{% static 'images/PeekingDog-09.svg' %}" 
               alt="A Happy Dog"
-              width="250px"
-              height="250px"
             >
           </div>
           <h2 class="card-title">{{ dog.name }}</h2>
