--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1>About Doggies DayCare</h1>
+<h1>About Peeking Doggies DayCare</h1>
 <hr />
 <p class="page-content">
-  I like long walks down the beach. I also enjoy treats and sniffing other dogs bottoms!
+  For dogs that like long walks down the beach, playng with their fur buddies, and also enjoy treats and sniffing other dogs bottoms! We do it all! We will wilk, play and feed your best friend while you're working or away on a fantastic trip! 
 </p>
-
+<p class="page-content">
+  Let us worry about your furry bestie while you're away. It's hassle free and not as expensive as you may think. Contact us today!
+</p>
 {% endblock %}
