--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,14 +18,9 @@
 </head>
 <body class="back">
   <header>
-    <div class="header-logo-container">
-      <a href="/">
-        <img 
-          src="{% static 'images/PeekingDog-07.svg' %}"
-          alt="The Peeking Doggies Daycare Logo"
-        >
+      <a class="top" href="/">
+        The Peeking Doggies DayCare
       </a>
-    </div>
     <nav>
       <ul>
         <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
