--- a/main_app/templates/dogs/detail.html
+++ b/main_app/templates/dogs/detail.html
@@ -24,7 +24,7 @@
 <section class="dog-container">
   <div class="dog-img">
     <img 
-      src="{% static 'images/dog.jpg' %}" 
+      src="{% static 'images/PeekingDog-09.svg' %}" 
       alt="Dog Image"
       width=250px
       height=250px
@@ -49,15 +49,15 @@
     <div class="subsection-title">
       <h2>Feedings</h2>
       <img 
-        src="{% static 'images/cat-cone.svg' %}" 
+        src="{% static 'images/PeekingDog-02.svg' %}" 
         alt="Peeking Dog"
       />
       <img 
-        src="{% static 'images/cat-onigiri.svg' %}"
+        src="{% static 'images/PeekingDog-03.svg' %}"
         alt="Peeking Dog"
       />
       <img 
-        src="{% static 'images/kitty-kabob.svg' %}" 
+        src="{% static 'images/PeekingDog-04.svg' %}" 
         alt="Peeking Dog"
       />
     </div>
@@ -100,9 +100,9 @@
   <section class="toys">
     <div class="subsection-title">
       <h2>Toys</h2>
-      {% comment %} <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
-      <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
-      <img src="{% static 'images/fish.svg' %}" alt="A fishy toy" /> {% endcomment %}
+      <img src="{% static 'images/bone.png' %}" alt="A bone toy" />
+      <img src="{% static 'images/frisbee.png' %}" alt="A frisbee toy" />
+      <img src="{% static 'images/hot-dog.png' %}" alt="A hot dog toy" />
       </div>
       <h3>{{ dog.name }}'s Toys</h3>
       <div class="subsection-content">
