--- a/main_app/templates/dogs/index.html
+++ b/main_app/templates/dogs/index.html
@@ -13,10 +13,9 @@
 
 <section class="page-header">
   <h1>Dog List</h1>
-  <img src="{% static 'images/PeekingDog-01.svg' %}" alt="A Needy Dog" />
-  <img src="{% static 'images/PeekingDog-05.svg' %}" alt="A Hyper Dog" />
-  <img src="{% static 'images/PeekingDog-20.svg' %}" alt="A Former Guide Dog" />
-  <img src="{% static 'images/PeekingDog-18.svg' %}" alt="A Happy Puppy" />
+  <img class="d-list" src="{% static 'images/PeekingDog-13.svg' %}" alt="A Needy Dog" />
+  <img src="{% static 'images/PeekingDog-15.svg' %}" alt="A Former Guide Dog" />
+  <img src="{% static 'images/PeekingDog-16.svg' %}" alt="A Happy Puppy" />
 </section>
 
 <section class="card-container">
