--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<section class="logo-container">
+<section class="logo-container text-center">
   {% comment %} <div class="dog-container">
     <img src="{% static 'images/PeekingDog-19.svg' %}" alt="The Peeking Doggie DayCare Dog" />
   </div> {% endcomment %}
@@ -15,6 +15,8 @@
  <img 
     src="{% static 'images/hp_img.jpg' %}" 
     alt="Text reads: Peeking Doggie DayCare"
+    width="600px"
+    height-"600px"
   />
 </section>
 
