--- a/main_app/templates/main_app/toy_confirm_delete.html
+++ b/main_app/templates/main_app/toy_confirm_delete.html
@@ -5,7 +5,7 @@
 
 <div class="page-header">
   <h1>Delete Toy?</h1>
-  <img src="{% static 'images/nerd-cat.svg' %}" alt="Peeking Puppy"/>
+  <img src="{% static 'images/frisbee.png' %}" alt="A frisbee toy"/>
 </div>
 <h2>Are you sure you want to delete {{ object.name }}?</h2>
 
