--- a/main_app/templates/main_app/toy_form.html
+++ b/main_app/templates/main_app/toy_form.html
@@ -12,7 +12,7 @@
   {% else %}
     <h1>Add a Toy</h1>
   {% endif %}
-  <img src="{% static 'images/nerd-cat.svg' %}" alt="Peeking Puppy"/>
+  <img src="{% static 'images/frisbee.png' %}" alt="A frisbee toy"/>
 </div>
 <form action="" method="post" class="form-container" autocomplete="off">
   {% csrf_token %}
