--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,10 +23,17 @@
       </a>
     <nav>
       <ul>
-        <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
-        <li><a href="{% url 'dogs_create' %}">Add a Doggy</a></li>
-        <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
+          <li><a href="{% url 'dogs_create' %}">Add a Doggy</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
