--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -9,7 +9,9 @@
 
 <div class="page-header">
   <h1>Sign Up</h1>
-  <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/>
+  <img src="{% static 'images/PeekingDog-16.svg' %}" 
+  alt="A cat using a computer"
+  height="200px"/>
 </div>
 {% if error_message %}
   <p class="red-text">{{ error_message }}</p>
