fix images for live page

--- a/main_app/templates/main_app/toy_list.html
+++ b/main_app/templates/main_app/toy_list.html
@@ -12,11 +12,10 @@
 {% block content %}
 
 <section class="page-header">
-  <h1>All Cat Toys</h1>
-  <img src="{% static 'images/string.svg' %}" alt="Peeking Puppy" />
-  <img src="{% static 'images/mouse.svg' %}" alt="Peeking Puppy" />
-  <img src="{% static 'images/post.svg' %}" alt="Peeking Puppy" />
-  <img src="{% static 'images/fish.svg' %}" alt="Peeking Puppy" />
+  <h1>All Dog Toys</h1>
+  <img src="{% static 'images/bone.png' %}" alt="Bone" />
+  <img src="{% static 'images/hot-dog.png' %}" alt="Hot Dog" />
+  <img src="{% static 'images/frisbee.png' %}" alt="Frisbee" />
 </section>
 
 <section class="card-container">
