fix nav and images

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,6 +25,7 @@
       <ul>
         {% if user.is_authenticated %}
           <li><a href="{% url 'dogs_index' %}">All Doggies</a></li>
+          <li><a href="{% url 'toys_index' %}">All Dog Toys</a></li>
           <li><a href="{% url 'dogs_create' %}">Add a Doggy</a></li>
           <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
